base/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: k8s4se
spec:
  replicas: 
  selector:
    matchLabels:
      deployment: hello
  template:
    metadata:
      labels:
        deployment: hello
    spec:
      containers:
      - name: hello
        image: k8s4se/hello:latest
        ports:
        - containerPort: 8080
