base/job1.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jobs
  namespace: k8s4se
spec:
  serviceName: jobs
  selector:
    matchLabels:
      app: jobs
  template:
    metadata:
      labels:
        app: jobs
    spec:
      containers:
      - name: job1
        image: k8s4se/job1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        hostPath:
          path: /volumes/jobs-flow/data
          type: DirectoryOrCreate
