base/crashloop-reporter-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: crashloop-reporter
  namespace: k8s4se
spec:
  selector:
    deployment: crashloop-reporter
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
