base/hello-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello
  namespace: k8s4se
spec:
  selector:
    deployment: hello
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
