base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    deployment: hello
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
