base/hello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: k8s4se
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8s4e.org
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              serviceName: hello
              servicePort: 80
